<resources>
    <string name="app_name">App for test</string>
    <string name="true1">True</string>
    <string name="false1">False</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollw</string>
    <string name="couter">โจมตี</string>
    <string name="buyitem">ซื้อของ</string>
    <string name="upHp">เติมเลือด</string>
    <string name="item1">Hp+100 (20 point)</string>
    <string name="item2">Hp+1,000 (200 point)</string>
    <string name="Welcome">Welcome</string>
</resources>
